# LanguagePractice

./: '  .gitignore  README.md  benchmark  benchmark-justsha1  debug.ruby-missing  haskell build  package-lock.json  summary.txt  test.python  test.ruby
bash/: find-dups
golang/: .gitignore
golang/find-dups/: .find-dups.go.swp  find-dups  find-dups.go  go.mod
golang/hello/: hello
golang/sha1sum/: go.mod  sha1sum  sha1sum.go
haskell/: README.md  build-find-dups  combineStructs  combineStructs.hs  find-dups  find-dups-v1.hs  find-dups.hs  sha1sum  sha1sum.hs
julia/: dtcvt  find-dups  sha1sum  table.md
kotlin/: .gitignore
python/: aggregates.py  find-duplicate-contents  find-dups  sha1sum
ruby/: .gitignore  find-dups  hello.rb  sha1sum
rust/find-dups/: Cargo.toml
rust/find-dups-RustCrypto/: Cargo.toml
rust/find-dups-RustCrypto/src/: main.rs
rust/find-dups/src/: main.rs
rust/hello/: hello
rust/hello2/: Cargo.toml
rust/sha1sum/: Cargo.toml
rust/sha1sum/src/: main.rs
test-data/: hardlink-bye  name2
typescript/: find-dups  find-dups.js  find-dups.ts  hello.js  hello.ts  package-lock.json  package.json  sha1sum.js  sha1sum.ts
