[package]
name = "find-dups"
version = "0.1.0"
authors = ["David Mertz <mertz@kdm.training>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
rust-crypto = "^0.2"
clap = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 1
