[package]
name = "find-dups"
version = "0.1.0"
authors = ["David Mertz <mertz@kdm.training>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
sha-1 = "0.9.7"
clap = "2"
num-format = "0.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 1
