[package]
name = "find-dups"
version = "0.2.0"
authors = ["David Mertz <mertz@kdm.training>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
sha1 = "0.10.6"
clap = "2"
num-format = "0.4.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
